fix button wrapping

--- a/force-app/main/default/internal-components/lwc/crmMessagingThreadViewer/newDesignTemplate.css
+++ b/force-app/main/default/internal-components/lwc/crmMessagingThreadViewer/newDesignTemplate.css
@@ -14,13 +14,9 @@
 
 .toolbar {
     display: block;
-    border-radius: 0;
+    border: 0;
 }
 
 .button {
     min-height: 1rem;
-}
-
-.messageBox {
-    border: 0;
 }
