--- a/force-app/main/default/lwc/crmMessagingQuickText/crmMessagingQuickText.css
+++ b/force-app/main/default/lwc/crmMessagingQuickText/crmMessagingQuickText.css
@@ -20,7 +20,3 @@
     height: 1px;
     overflow: hidden;
 }
-
-.inputBox {
-    border: 0;
-}
